--- a/.github/workflows/windows_cpp.yml
+++ b/.github/workflows/windows_cpp.yml
@@ -27,11 +27,11 @@ jobs:
       - name: Build
         run: |
           cd build
-          cd c
+          cd cpp
           .\build.bat
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: raknet-${{ matrix.architecture }}
-          path: build/c/raknet.dll
+          path: build/cpp/raknet.dll
