Include all so files

--- a/.github/workflows/linux_cpp.yml
+++ b/.github/workflows/linux_cpp.yml
@@ -28,6 +28,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: raknet
-          path: |
-            build/cpp/raknet-x86.so
-            build/cpp/raknet-x86-x64.so
+          path: build/cpp/*.so
