--- a/.github/workflows/windows_go.yml
+++ b/.github/workflows/windows_go.yml
@@ -16,18 +16,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: "^1.21.5"
           architecture: ${{ matrix.architecture }}
-      
+
       - name: Version
         run: go version
-      
+
       - name: Build
-        run: 
+        run: |
           cd build
           cd go
           .\build.bat
