--- a/.github/workflows/linux_go.yml
+++ b/.github/workflows/linux_go.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           cd build
           cd go
-          bash build.sh
+          bash build.sh go-raknet.so
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
