--- a/.github/workflows/macos_go.yml
+++ b/.github/workflows/macos_go.yml
@@ -29,10 +29,10 @@ jobs:
         run: |
           cd build
           cd go
-          bash build.sh
+          bash build.sh go-raknet.dylib
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: raknet-amd64
-          path: raknet_go/go-raknet.so
+          path: raknet_go/go-raknet.dylib
