--- a/.github/workflows/linux_rust.yml
+++ b/.github/workflows/linux_rust.yml
@@ -27,4 +27,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: raknet-amd64
-          path: target/release/rust-raknet.so
+          path: target/release/
