--- a/.github/workflows/linux_rust.yml
+++ b/.github/workflows/linux_rust.yml
@@ -27,4 +27,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: raknet
-          path: raknet_rs/target/release/librust-raknet.so
+          path: raknet_rs/target/release/
