--- a/.github/workflows/windows_rust.yml
+++ b/.github/workflows/windows_rust.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -27,4 +27,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: raknet-amd64
-          path: raknet_rs/target/release/librust-raknet.so
+          path: raknet_rs/target/release/librust-raknet.dll
