Run correct build script

--- a/.github/workflows/windows_rust.yml
+++ b/.github/workflows/windows_rust.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           cd build
           cd rust
-          bash build.sh
+          .\build.bat
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
