--- a/.github/workflows/macos_rust.yml
+++ b/.github/workflows/macos_rust.yml
@@ -1,11 +1,11 @@
-name: Linux Rust Build
+name: MacOS Rust Build
 
 on:
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
@@ -21,10 +21,10 @@ jobs:
         run: |
           cd build
           cd rust
-          bash build.sh librust_raknet.so librust-raknet.so
+          bash build.sh librust_raknet.dylib librust-raknet.dylib
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: raknet-amd64
-          path: raknet_rs/target/release/librust-raknet.so
+          path: raknet_rs/target/release/librust-raknet.dylib
