--- a/.github/workflows/windows_rust.yml
+++ b/.github/workflows/windows_rust.yml
@@ -27,4 +27,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: raknet-amd64
-          path: raknet_rs/target/release/librust-raknet.dll
+          path: raknet_rs/target/release/
